   obsproc_prep/sorc/prepobs_prepdata.fd/wordlength.f
   obsproc_prep/sorc/prepobs_prevents.fd/gblevents_cdas.f
   obsproc_prep/sorc/prepobs_prevents.fd/makefile
   obsproc_prep/sorc/prepobs_prevents.fd/prevents.f
   obsproc_prep/sorc/prepobs_profcqc.fd/makefile
   obsproc_prep/sorc/prepobs_profcqc.fd/profcqc.f
   obsproc_prep/sorc/syndat_syndata.fd/makefile
   obsproc_prep/sorc/syndat_syndata.fd/syndata.f
   obsproc_prep/sorc/build.sh
   obsproc_prep/sorc/clean.sh
   obsproc_prep/sorc/install.sh
   obsproc_prep/sorc/load_libs.rc
   obsproc_prep/sorc/README.build
   obsproc_prep/sorc/setlibs.rc
   obsproc_prep/ush/prepobs_cqcbufr.sh
   obsproc_prep/ush/prepobs_cqcvad.sh
   obsproc_prep/ush/prepobs_makeprepbufr.sh
   obsproc_prep/ush/prepobs_oiqcbufr.sh
   obsproc_prep/ush/prepobs_prepacqc.sh
   obsproc_prep/ush/prepobs_prevents.sh
   obsproc_prep/ush/prepobs_profcqc.sh
   obsproc_prep/ush/prepobs_syndata.sh

( M - modified)


 Source code changes:
   prepobs_cqcbufr.fd/cqcbufr.f (main program):
    - Corrected an integer overflow issue which prevented the temporal
      check from running in the CDAS network (the only network where it
      currently would run).
      BENEFIT: This QC check now runs in the CDAS PREP2 jobs.


  <  incomplete  >



XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
obsproc_prep release 3.6.0 --> released Feb 8, 2016
                               updated May 18, 2016
                           --> implemented  ?  ??, 2016

files:
   obsproc_prep/fix/prepobs_anow.bufrtable
   obsproc_prep/fix/prepobs_cqc_statbge
   obsproc_prep/fix/prepobs_landc
 M obsproc_prep/fix/prepobs_prep.bufrtable
   obsproc_prep/fix/syndat_syndata.slmask.t126.gaussian
   obsproc_prep/fix/syndat_weight
   obsproc_prep/sorc/prepobs_cqcbufr.fd/cqcbufr.f
   obsproc_prep/sorc/prepobs_cqcbufr.fd/makefile
   obsproc_prep/sorc/prepobs_cqcbufr.fd/radcor.f
   obsproc_prep/sorc/prepobs_cqcvad.fd/cqcvad.f