@@ -1,14 +1,21 @@
 #!/bin/sh
 set -x
 set -e    # fail if an error is hit so that errors do not go unnoticed
+
+module purge
+module load ics/12.1
+module load ibmpe/1.3.0.10
+source ./load_libs.rc  # use modules to set library related environment variables
+#source ./setlibs.rc  # use this if existing library modules don't quite cover all that is needed.
+
+module list
+
 if [ $# -eq 0 ]; then
   dir_list=*.fd
 else
   dir_list=$*
 fi
 echo $dir_list
-#source ./load_libs.rc  # use modules to set library related environment variables
-source ./setlibs.rc  # use this if existing library modules don't quite cover all that is needed.
 
 clobber=${clobber:-clobber_yes}  # user can override the default of running "make clobber"
 for sdir in $dir_list; do
